Affiche l'adresse email sur la page de contact

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
         <section class="container">
             <div class="inline-cta" aria-label="Contact email">
                 <p>Pour toute demande, vous pouvez nous écrire à l'adresse mail suivante :</p>
-                <a href="mailto:contact@holdinginfine.com" class="btn-contact">Écrire un email</a>
+                <a href="mailto:contact@holdinginfine.com" class="btn-contact">contact@holdinginfine.com</a>
             </div>
             <p style="margin-top:1rem;"><strong>Chemin des Cigognes 4 - CH 1162 St Prex · Switzerland</strong></p>
         </section>
